review based refactoring to follow best practices